# mera

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deptry.yml  pytest.yml  wiki.yml
mera/: Lmer_temp_copy.py  __init__.py  mera_pymer4.py  mera_statsmodel.py  utils.py
mera/example/: mera_pymer4_example.py
mera/example/resources/: events.csv  stations.csv
tests/: test_mera.py
tests/residuals/: event_res_df.csv  site_cond_std_df.csv
tests/resources/: mask.csv
tests/resources/mask/: bias_std_df.csv  event_cond_std_df.csv  event_res_df.csv  site_cond_std_df.csv  site_res_df.csv
tests/resources/no_mask/: bias_std_df.csv  event_cond_std_df.csv  site_res_df.csv
wiki/: Home.md  info_for_new_pymer4
